--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
 </head>
 <body>
   <link href="https://fonts.googleapis.com/css?family=Rajdhani" rel="stylesheet">
+<div id="box" class="container-fluid">
+  <h2 id="poetry"></h2>
+   <h2 id="poetr"></h2>
+  <div id="author-box">
+    <p id="poet"></p>
+  </div>
+</div>
+</form>
+</div>
 <script src="js/jquery.min.js"></script>
 <script src="js/index.js"></script>
 <script src="js/background.js"></script>
